feat(expansion-panel): Add Expansion Panel component
closes #46

--- a/demos/theme/_theme-shared.scss
+++ b/demos/theme/_theme-shared.scss
@@ -21,6 +21,7 @@
 @import "../../packages/mdc-dialog/mdc-dialog";
 @import "../../packages/mdc-drawer/temporary/mdc-temporary-drawer";
 @import "../../packages/mdc-elevation/mdc-elevation";
+@import "../../packages/mdc-expansion-panel/mdc-expansion-panel";
 @import "../../packages/mdc-fab/mdc-fab";
 @import "../../packages/mdc-form-field/mdc-form-field";
 @import "../../packages/mdc-icon-toggle/mdc-icon-toggle";
