--- a/packages/material-components-web/material-components-web.scss
+++ b/packages/material-components-web/material-components-web.scss
@@ -22,6 +22,7 @@
 @import "@material/dialog/mdc-dialog";
 @import "@material/drawer/mdc-drawer";
 @import "@material/elevation/mdc-elevation";
+@import "@material/expansion-panel/mdc-expansion-panel";
 @import "@material/fab/mdc-fab";
 @import "@material/form-field/mdc-form-field";
 @import "@material/grid-list/mdc-grid-list";
