--- a/packages/mdc-fab/_mixins.scss
+++ b/packages/mdc-fab/_mixins.scss
@@ -19,6 +19,7 @@
 @import "@material/ripple/variables";
 @import "@material/theme/functions";
 @import "@material/theme/mixins";
+@import "./variables";
 
 @mixin mdc-fab-accessible($container-color) {
   $fill-tone: mdc-theme-tone($container-color);
@@ -41,9 +42,6 @@
 @mixin mdc-fab-ink-color($color) {
   @include mdc-theme-prop(color, $color);
 }
-
-$mdc-fab-icon-enter-delay_: 90ms;
-$mdc-fab-icon-enter-duration_: 180ms;
 
 @mixin mdc-fab-base_ {
   @include mdc-ripple-surface;
@@ -133,4 +131,42 @@ $mdc-fab-icon-enter-duration_: 180ms;
     transform: scale(0);
     transition: mdc-animation-exit-permanent(transform, 135ms);
   }
+}
+
+@mixin mdc-fab--fling_ {
+  .mdc-fab--fling__icon {
+    transform: scale(1);
+    transition: mdc-animation-enter(transform, $mdc-fab-fling-transition_, 0);
+  }
+
+  .mdc-fab--fling--expanded__icon {
+    display: none;
+    transform: scale(0);
+    transition: mdc-animation-exit-permanent(transform, 135ms);
+  }
+}
+
+@mixin mdc-fab--fling__action_ {
+}
+
+@mixin mdc-fab--fling--expanded_ {
+  .mdc-fab--fling--expanded__icon {
+    display: initial;
+    transform: scale(1);
+    transition: mdc-animation-enter(transform, $mdc-fab-fling-transition_, 0);
+  }
+
+  .mdc-fab--fling__icon {
+    display: none;
+    transform: scale(0);
+    transition: mdc-animation-exit-permanent(transform, 135ms);
+  }
+
+  .mdc-fab--__action {
+    @include mdc-fab--fling--expanded__action_;
+  }
+}
+
+@mixin mdc-fab--fling--expanded__action_ {
+
 }
